--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "firebase": "^9.21.0",
+    "pinia": "^2.0.35",
     "vue": "^3.2.13"
   },
   "devDependencies": {
