--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "firebase": "^9.21.0",
+    "firestore": "^1.1.6",
     "pinia": "^2.0.35",
     "vue": "^3.2.13"
   },
